# smal

./: .clang-format  .gitignore  LICENSE.md  README.md  meson.build
include/: loader.hpp  screen.hpp
include/smal/Algo/: ArrayList.hpp  ArrayStack.hpp  HashTable.hpp  Tuple.hpp  define.hpp  depend.hpp  import.hpp
include/smal/Algo/impl/: ArrayList.tpp  HashTable.tpp
include/smal/Algo/inline/: ArrayList.inl  ArrayStack.inl  HashTable.inl  Tuple.inl
include/smal/Algo/traits/: IndexSeq.hpp
include/smal/Base/: Action.hpp  String.hpp  define.hpp  depend.hpp  import.hpp  math.hpp  util.hpp
include/smal/Base/File/: FileIStream.hpp  FileOStream.hpp  FileReader.hpp  FileWriter.hpp
include/smal/Base/impl/: Action.tpp  util.tpp
include/smal/Base/inline/: math.inl
include/smal/Base/traits/: IsSameType.hpp  RemovePtr.hpp  RemoveRef.hpp  Signature.hpp  declared.hpp
include/smal/Common/: Action.hpp  File.hpp  FileIStream.hpp  FileOStream.hpp  FileReader.hpp  FileSystem.hpp  FileWriter.hpp  Func.hpp  Function.hpp  String.hpp  Tuple.hpp  define.hpp  depend.hpp  helper.hpp  import.hpp  math.hpp  util.hpp
include/smal/Common/File/: FileIStream.hpp  FileOStream.hpp  FileReader.hpp  FileWriter.hpp
include/smal/Common/impl/: Action.tpp  File.tpp  Func.tpp  Function.tpp  Tuple.tpp  TupleHelp.hpp  define.tpp  helper.tpp  util.tpp
include/smal/Common/traits/: FuncSignat.hpp  RemovePtr.hpp  RemoveRef.hpp  Signature.hpp  declared.hpp
include/smal/Engine/: Action.hpp  Actor.hpp  ActorManager.hpp  AssetManager.hpp  Engine.hpp  Screen.hpp  ScreenChanges.hpp  ScreenLocator.hpp  ScreenMachine.hpp  State.hpp  StateManager.hpp  define.hpp  depend.hpp  import.hpp
include/smal/Engine/Screen/: Screen.hpp  ScreenMachine.hpp
include/smal/Engine/inline/: AssetManager.inl  StateManager.inl
include/smal/Entity/: Actors.hpp  AttribCode.hpp  AttribHolder.hpp  AttribMng.hpp  Attributes.hpp  CmpHolder.hpp  CompHolder.hpp  Entity.hpp  Holder.hpp  Status.hpp  define.hpp  depend.hpp  import.hpp
include/smal/Entity/impl/: Actors.tpp  AttribHolder.tpp  AttribMng.tpp  Attributes.tpp  (+5 more)
include/smal/Json/: JsonClient.hpp  JsonLexer.hpp  JsonReader.hpp  JsonToken.hpp  JsonValue.hpp  define.hpp  depend.hpp  import.hpp
include/smal/Memory/: ArenaAlloc.hpp  Array.hpp  Bucket.hpp  Buffer.hpp  Creator.hpp  FixedArray.hpp  Handle.hpp  Memory.hpp  MemoryModule.hpp  MemoryService.hpp  MemoryTable.hpp  Origin.hpp  OriginFactory.hpp  Page.hpp  PageAlloc.hpp  PageTable.hpp  PagedArray.hpp  Part.hpp  PartTable.hpp  define.hpp  depend.hpp  helper.hpp  import.hpp  util.hpp
include/smal/Parser/: String.hpp  define.hpp  depend.hpp  import.hpp
include/smal/Signal/: Delegate.hpp  Observer.hpp  Signal.hpp  SignalLink.hpp  define.hpp  depend.hpp  import.hpp
include/smal/Struct/: ArrayList.hpp  ITable.hpp  SparseMap.hpp  SparseSet.hpp  SparseTable.hpp  Vector.hpp  define.hpp  depend.hpp  import.hpp
source/: PauseState.hpp  TitleState.hpp  main.cpp  smal.cpp
source/game/: App.hpp  Attrib.hpp  Engine.hpp
source/smal/Base/: String.cpp  math.cpp  meson.build
source/smal/Common/: File.cpp  FileIStream.cpp  FileOStream.cpp  FileReader.cpp  FileSystem.cpp  FileWriter.cpp  String.cpp  helper.cpp  math.cpp  meson.build
source/smal/Common/File/: FileIStream.cpp  FileOStream.cpp  FileReader.cpp  FileWriter.cpp
source/smal/Engine/: Action.cpp  Actor.cpp  ActorManager.cpp  AssetManager.cpp  Engine.cpp  Screen.cpp  ScreenChanges.cpp  ScreenLocator.cpp  ScreenMachine.cpp  State.cpp  StateManager.cpp  meson.build
source/smal/Json/: JsonClient.cpp  JsonLexer.cpp  JsonReader.cpp  JsonToken.cpp  JsonValue.cpp  meson.build
source/smal/Memory/: ArenaAlloc.cpp  Creator.cpp  Memory.cpp  MemoryModule.cpp  MemoryService.cpp  MemoryTable.cpp  Origin.cpp  OriginFactory.cpp  Page.cpp  PageAlloc.cpp  PageTable.cpp  Part.cpp  PartTable.cpp  define.cpp  helper.cpp  meson.build  util.cpp
source/smal/Memory/Alloc/: AreaAlloc.cpp  ArenaAlloc.cpp  BaseAlloc.cpp  ChainAlloc.cpp  NullAlloc.cpp  PageAlloc.cpp  PageTable.cpp  PoolAlloc.cpp  ProxyAlloc.cpp  SplitAlloc.cpp  StackAlloc.cpp
source/smal/Memory/Block/: PageTable.cpp
source/smal/Memory/Layout/: FixedLayout.cpp  PagedLayout.cpp
source/smal/Memory/Origin/: ArenaOrigin.cpp  BaseOrigin.cpp  DummyOrigin.cpp  NullOrigin.cpp  PoolOrigin.cpp  SplitOrigin.cpp  StackOrigin.cpp
source/smal/Parser/: String.cpp
(+91 files in other folders)
