smal_common = static_library('smal-common',
    sources: [
        'String.cpp',
        'File/FileIStream.cpp',
        'File/FileOStream.cpp',
        'File/FileReader.cpp',
        'File/FileWriter.cpp',
        'math.cpp',
    ],
    include_directories: [smal_header],
)

smal_define = smal_define + smal_common
